<resources>
    <string name="app_name">LibraMe</string>
    <string name="User">Usuario</string>
    <string name="Password">Contraseña</string>
    <string name="Login">Log In</string>
    <string name="SignUp">Nuevo usuario</string>
    <string name="Noaccount">¿No tienes cuenta?</string>
    <string name="Forgotpass">Olvidé mi contraseña</string>
    <string name="rememberuser">Recordar usuario</string>
    <string name="ingreso">LOG IN</string>
    <string name="back">Atrás</string>
    <string name="End">Finalizar</string>
    <string name="Newuser">Nuevo usuario</string>
    <string name="email">Email</string>
    <string name="wronguser">Usuario y/o contraseña incorrecta</string>
    <string name="ingresando">Ingresando</string>
    <string name="menuseleccion">Listado libros</string>

    <string name="action_settings">Configuración</string>

    <string name="manuallyAdd">Agregar manualmente</string>
    <string name="scanBook">Escanear ISBN</string>
    <string name="searchBook">Busqueda magica</string>
    <string name="search">Buscar</string>
    <string name="listado">Seleccionar libro</string>

    <string name="otrogenero">Otro</string>
    <string-array name="listGeneros">
        <item>Seleccionar Género</item>
        <item>Animales</item>
        <item>Arte</item>
        <item>Autoayuda</item>
        <item>Bolsillo</item>
        <item>Ciencia</item>
        <item>Ciencia ficcion</item>
        <item>Cine</item>
        <item>Clásicos</item>
        <item>Cómics</item>
        <item>Deportes</item>
        <item>Derecho</item>
        <item>Diccionario</item>
        <item>Diseño</item>
        <item>Drama</item>
        <item>Economía</item>
        <item>Fantasía</item>
        <item>Filosofía</item>
        <item>Fotografía</item>
        <item>Historia</item>
        <item>Humor</item>
        <item>Latinoamericanos</item>
        <item>Maternidad</item>
        <item>Medicina</item>
        <item>Música</item>
        <item>Negocios</item>
        <item>Novela gráfica</item>
        <item>Novela historica</item>
        <item>Novela romántica</item>
        <item>Novelas</item>
        <item>Poesía</item>
        <item>Policiales</item>
        <item>Política</item>
        <item>Psicologia</item>
        <item>Sociologia</item>
        <item>Teatro</item>
        <item>Técnicos</item>
        <item>Turismo</item>
    </string-array>

    <string name="carga">Ingrese ISBN13, ISBN10 o el Título</string>
    //Strings para carga de libros
    <string name="ISBN13">ISBN13</string>
    <string name="ISBN10">ISBN10</string>
    <string name="Titulo">Título</string>
    <string name="Autor">Autor</string>
    <string name="Genero">Género</string>
    <string name="Descripcion">Breve descripción</string>
    <string name="Edicion">Edición</string>
    <string name="Encuadernacion">Encuadernación</string>
    <string name="Editorial">Editorial</string>
    <string name="Fecha">Fecha de publicación</string>
    <string name="Precio">Precio (USD)</string>
    <string name="nuevolibro">Nuevo libro</string>
    <string name="Cancel">Cancelar</string>
    <string name="Agregar">Agregar</string>
    <string name="Rutaimg">Ruta img</string>
    <string name="Paginas">"Páginas"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>